--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         :root{
-            --clr-bg:#0b0b0b;
+            --clr-bg:#4F0606;
             --clr-primary:#8b0000;
             --clr-secondary:#111;
             --clr-text:#f0f0f0;
@@ -18,9 +18,9 @@
             --fw-body:400;
             --lh-body:1.6;
 
-            /* Grille rétro */
+            /* Grille rétro
             --clr-grid:#1c1c1c; 
-            --grid-size: 25px;
+            --grid-size: 25px; */
         }
         
         *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
